codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 3309
expression: popup
---
  Select Provider
  Loading available providers...

›    Loading providers...

  enter select · esc back
